# clinical-toolkit

./: .gitignore  ANDROID_AUTOMATION_README.md  ANDROID_QUICK_START.md  ANDROID_TESTING_GUIDE.md  ANDROID_TROUBLESHOOTING.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_COMPLETE.md  Clinical-Wizard-Desktop.bat  DESIGN_AUDIT_HANDOFF.md  GIT_CONSOLIDATION_TASK.md  GIT_PULL_SAFE_GUIDE.md  HANDOFF_COMPLETE.md  HANDOFF_TO_NEXT_CLAUDE.md  INTEGRATION_PLAN.md  LAUNCH-SCRIPT-README.md  LEGAL_FRAMEWORK_TESTING.md  MERGE_PROGRESS.md  NEXT_CLAUDE_PROMPT.md  NEXT_SESSION_START_HERE.md  PC_INTEGRATION_STRATEGY.md  README.md  SECURITY.md  SESSION_SUMMARY.md  START_HERE_NEXT_SESSION.md  TESTING_GUIDE.md  WINDOWS_TESTING_PROCEDURES.md  android-test-config.json  android-test.bat  android-test.cjs  android-test.js  android-test.ps1  capacitor.config.ts  check-accessibility.cjs  check-final-score.cjs  cleanup-branches.bat  delete-obsolete-branches.sh  desktop-app.js  desktop-launcher.cjs  eslint.config.js  (+22 more)
.claude/: settings.local.json
.git-safety-net/: config.json
.github/: BRANCH_PROTECTION.md  CLAUDE_CODE_WORKFLOW.md  GIT_SAFETY_NET.md
.netlify/: .gitignore
docs/: ARCHITECTURE.md
playwright-report/: index.html  results.json
scripts/: README.md  android-log-watch.ps1  android-quick-build.ps1  android-test-device.ps1  deploy-android.ps1  deploy-desktop.ps1  deploy-ios.ps1  deploy-web.ps1  done.ps1  install-safety-net.ps1  setup-ios.ps1  status.ps1  sync-devices.ps1  work.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
test-results/: .last-run.json
(+154 files in other folders)
