[package]
name = "clinical-wizard"
version = "1.0.0"
description = "Clinical Wizard - Evidence-based medical decision support and clinical tools for healthcare professionals"
authors = ["Perry Martin <perry.martin@student.edu>"]
license = "MIT"
repository = "https://github.com/pmartin1915/clinical-toolkit"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"
